--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="DearBook - Create Your Own Story" />
     <meta property="og:description" content="Dive into a world of creativity and adventure!" />
     <meta property="og:image" content="/og.png" />
-    <meta property="og:url" content="https://dearbook.com" />
+    <meta property="og:url" content="https://dearbook.fun" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="DearBook" />
 
@@ -22,6 +22,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,500&display=swap" rel="stylesheet">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CGTGSPMET1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-CGTGSPMET1');
+    </script>
 
 </head>
 <body>
